show 'retry' message if panel opened too soon

--- a/app/popup.html
+++ b/app/popup.html
@@ -7,5 +7,6 @@
         <!-- endbuild -->
     </head>
     <body>
+      <div id="retry">Please close an open the panel again</div>
     </body>
 </html>
