add moment.js lib. making panel loading in to image

--- a/app/popup.html
+++ b/app/popup.html
@@ -7,6 +7,6 @@
         <!-- endbuild -->
     </head>
     <body>
-      <div id="retry">Please close an open the panel again</div>
+      <img id="retry" src="images/loading.gif">
     </body>
 </html>
