--- a/app/popup.html
+++ b/app/popup.html
@@ -3,10 +3,13 @@
     <head>
         <link href="styles/main.css" rel="stylesheet">
         <!-- build:js scripts/popup.js -->
+        <script src="scripts/moment.min.js"></script>
         <script src="scripts/popup.js"></script>
         <!-- endbuild -->
     </head>
     <body>
-      <img id="retry" src="images/loading.gif">
+      <div id="retry">
+        <img src="images/loading.gif">
+      </div>
     </body>
 </html>
