--- a/app/popup.html
+++ b/app/popup.html
@@ -8,7 +8,7 @@
         <!-- endbuild -->
     </head>
     <body>
-      <div id="retry">
+      <div id="loading">
         <img src="images/loading.gif">
       </div>
     </body>
